@@ -41,9 +41,10 @@ GType     xfce_volume_button_get_type           (void) G_GNUC_CONST;
 GtkWidget *xfce_volume_button_new               (void);
 
 void       xfce_volume_button_set_muted         (XfceVolumeButton *button,
-                                                 gboolean          muted);
+                                                 gboolean          is_muted);
 void       xfce_volume_button_set_volume        (XfceVolumeButton *button,
                                                  gdouble           volume);
+gboolean   xfce_volume_button_get_muted         (XfceVolumeButton *button);
 void       xfce_volume_button_update            (XfceVolumeButton *button);
 void       xfce_volume_button_set_icon_size     (XfceVolumeButton *button,
                                                  gint              size);
